Fix box-shadow. way too much wasn't as obvious on laptop.

--- a/src/pages/Project/Projects.module.css
+++ b/src/pages/Project/Projects.module.css
@@ -48,7 +48,7 @@
     margin-left: auto;
     margin-right: auto;
     background-image: url('/src/img/basketball.jpg');
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
 }
 
 .square {
@@ -61,7 +61,7 @@
     left: 15%;
     background-size: cover;
     background-position: center;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
 }
 
 .subProjectsTitle {
@@ -103,7 +103,7 @@
     height: 200px;
     background-color: gray;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
     background-size: cover;
     background-position: center;
 }
